--- a/sample/src/autocomplete/virtualization.html
+++ b/sample/src/autocomplete/virtualization.html
@@ -19,26 +19,68 @@
                 </ul>
                 <div>
                     <au-code language="markup">
-                        <input au-kendo-autocomplete="data-source.bind: items;" value.bind="value">
+                      <input au-kendo-autocomplete="data-source.bind: datasource;
+                                                    virtual.bind: virtual;
+                                                    data-text-field: ShipName;
+                                                    height.bind: 520;
+                                                    template.bind: template">
                     </au-code>
                 </div>
                 <div>
                     <au-code language="javascript">
-                        export class BasicUse {
-                            items = [
-                                "Charles",
-                                "Jedd",
-                                "Nikolaj",
-                                "David",
-                                "Rob",
-                                "Matt",
-                                "Patrick",
-                                "Jason",
-                                "Martin",
-                                "Fredrick",
-                                "Alex"
-                            ]
+                      export class Virtualization {
+                      	constructor() {
+                      		this.datasource = {
+                            type: "odata",
+                            transport: {
+                                read: "//demos.telerik.com/kendo-ui/service/Northwind.svc/Orders"
+                            },
+                            schema: {
+                                model: {
+                                    fields: {
+                                        OrderID: { type: "number" },
+                                        Freight: { type: "number" },
+                                        ShipName: { type: "string" },
+                                        OrderDate: { type: "date" },
+                                        ShipCity: { type: "string" }
+                                    }
+                                }
+                            },
+                            pageSize: 80,
+                            serverPaging: true,
+                            serverFiltering: true
+                          };
+
+                          this.virtual = {
+                            itemHeight: 26,
+                            valueMapper: (options) => {
+                              $.ajax({
+                                url: "//demos.telerik.com/kendo-ui/service/Orders/ValueMapper",
+                                type: "GET",
+                                dataType: "jsonp",
+                                data: this.convertValues(options.value),
+                                success: function (data) {
+                                  options.success(data);
+                                }
+                              })
+                            }
+                          }
+
+                          this.template = '<span class="order-id">${OrderID}</span> ${ShipName}, ${ShipCountry}';
+                      	}
+
+                        convertValues(value) {
+                          var data = {};
+
+                          value = $.isArray(value) ? value : [value];
+
+                          for (var idx = 0; idx < value.length; idx++) {
+                            data["values[" + idx + "]"] = value[idx];
+                          }
+
+                          return data;
                         }
+                      }
                     </au-code>
                 </div>
             </div>
