--- a/sample/src/autocomplete/events.html
+++ b/sample/src/autocomplete/events.html
@@ -26,26 +26,78 @@
                 </ul>
                 <div>
                     <au-code language="markup">
-                        <input au-kendo-autocomplete="data-source.bind: items;" value.bind="value">
+                      <input au-kendo-autocomplete="data-source.bind: items;"
+                             kendo-open.trigger="logger.logger.log('open')"
+                             kendo-close.trigger="logger.log('close')"
+                             kendo-change.trigger="logger.log('change')"
+                             kendo-select.trigger="logger.log('select')"
+                             kendo-data-bound.trigger="logger.log('dataBound')"
+                             kendo-filtering.trigger="logger.log('filtering')">
                     </au-code>
                 </div>
                 <div>
                     <au-code language="javascript">
-                        export class BasicUse {
-                            items = [
-                                "Charles",
-                                "Jedd",
-                                "Nikolaj",
-                                "David",
-                                "Rob",
-                                "Matt",
-                                "Patrick",
-                                "Jason",
-                                "Martin",
-                                "Fredrick",
-                                "Alex"
-                            ]
-                        }
+                      export class Events {
+
+                        items = [
+                          "Alabama",
+                          "Alaska",
+                          "American Samoa",
+                          "Arizona",
+                          "Arkansas",
+                          "California",
+                          "Colorado",
+                          "Connecticut",
+                          "Delaware",
+                          "District of Columbia",
+                          "Florida",
+                          "Georgia",
+                          "Guam",
+                          "Hawaii",
+                          "Idaho",
+                          "Illinois",
+                          "Indiana",
+                          "Iowa",
+                          "Kansas",
+                          "Kentucky",
+                          "Louisiana",
+                          "Maine",
+                          "Maryland",
+                          "Massachusetts",
+                          "Michigan",
+                          "Minnesota",
+                          "Mississippi",
+                          "Missouri",
+                          "Montana",
+                          "Nebraska",
+                          "Nevada",
+                          "New Hampshire",
+                          "New Jersey",
+                          "New Mexico",
+                          "New York",
+                          "North Carolina",
+                          "North Dakota",
+                          "Northern Marianas Islands",
+                          "Ohio",
+                          "Oklahoma",
+                          "Oregon",
+                          "Pennsylvania",
+                          "Puerto Rico",
+                          "Rhode Island",
+                          "South Carolina",
+                          "South Dakota",
+                          "Tennessee",
+                          "Texas",
+                          "Utah",
+                          "Vermont",
+                          "Virginia",
+                          "Virgin Islands",
+                          "Washington",
+                          "West Virginia",
+                          "Wisconsin",
+                          "Wyoming"
+                        ];
+                      }
                     </au-code>
                 </div>
             </div>
