--- a/sample/src/autocomplete/remote-data.html
+++ b/sample/src/autocomplete/remote-data.html
@@ -22,29 +22,26 @@
                 <div>
                   <au-code language="markup">
                     <input au-kendo-autocomplete="data-source.bind: datasource;
-                      data-text-field: ProductName;
-                      filter: contains;
-                      min-length: 3"
-                      value.bind="value"
-                      style="width: 300px">
-                    </input>
+                                    data-text-field: ProductName;
+                                    filter: contains;
+                                    min-length: 3"
+                            value.bind="value"
+                            style="width: 300px"></input>
                   </au-code>
                 </div>
 
                 <div>
                   <au-code language="javascript">
                     export class RemoteData {
-                      datasource;
-
-                      constructor() {
-                        this.datasource = {
-                          type: "odata",
-                          serverFiltering: true,
-                          transport: {
-                            read: "//demos.telerik.com/kendo-ui/service/Northwind.svc/Products"
-                          }
+                    	constructor() {
+                    		this.datasource = {
+                            type: "odata",
+                            serverFiltering: true,
+                            transport: {
+                                read: "//demos.telerik.com/kendo-ui/service/Northwind.svc/Products"
+                            }
                         };
-                      }
+                    	}
                     }
                   </au-code>
                 </div>
