--- a/sample/src/button/api.html
+++ b/sample/src/button/api.html
@@ -17,6 +17,9 @@
                 <div>
                   <au-code language="markup">
                       <button au-kendo-button="enable.bind: enabled" class="k-primary" kendo-click.trigger="test()">Click me</button>
+
+                      <button au-kendo-button click.delegate="disable()">Disable</button>
+                      <button au-kendo-button click.delegate="enable()">Enable</button>
                   </au-code>
                 </div>
 
