--- a/sample/src/charts/bar-charts/binding-to-grouped-data.html
+++ b/sample/src/charts/bar-charts/binding-to-grouped-data.html
@@ -16,8 +16,8 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
-                    <li>Description</li>
-                </ul>
+                     <!-- <li>Description</li> -->
+               </ul>
                 <div>
                     <au-code language="markup">
                        <au-kendo-chart title.bind="{text: 'Stock Prices'}"
