--- a/sample/src/charts/bar-charts/multi-axis.html
+++ b/sample/src/charts/bar-charts/multi-axis.html
@@ -14,8 +14,8 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
-                    <li>Description</li>
-                </ul>
+                     <!-- <li>Description</li> -->
+               </ul>
                 <div>
                     <au-code language="markup">
                       <au-kendo-chart title.bind="{text: 'Hybrid car mileage report'}"
@@ -87,7 +87,7 @@
                 <div>
                     <au-markdown>
                         The Telerik Kendo UI Bar chart supports multiple axis. This helps you leverage the best charting performance and visualize data on any number axis to provide solid business reports for your users.
-                        
+
                         The example above shows a hybrid car range report visualized through four value axes: _km_, _miles_, _miles per gallon_ and _liters per 100km_. Note that each of them has a unique name which is set through the valueAxis.titleattribute. You can also populate the **categoryAxis.axisCrossingValue** array with values to specify the alignment of the value axes.
                     </au-markdown>
                 </div>
