--- a/sample/src/charts/bar-charts/logarithmic-axis.html
+++ b/sample/src/charts/bar-charts/logarithmic-axis.html
@@ -12,7 +12,7 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
-                    <li>Description</li>
+                    <!-- <li>Description</li> -->
                 </ul>
                 <div>
                     <au-code language="markup">
