--- a/sample/src/charts/funel-charts/binding-to-remote-data.html
+++ b/sample/src/charts/funel-charts/binding-to-remote-data.html
@@ -1,11 +1,10 @@
 <template>
     <section>
-        <collapse-panel title="Binding to remote data" allow-collapse.bind="false">
-          <au-kendo-chart title.bind="{text: 'Spain electricity production (GWh)'}"
-                          data-source.bind="datasource"
-                          legend.bind="{position: 'top'}"
+        <collapse-panel title="Bining to remote data" allow-collapse.bind="false">
+          <au-kendo-chart title.bind="{text: ''}"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
                           series.bind="series"
-                          series-defaults.bind="{type: 'line'}"
                           value-axis.bind="valueAxis"
                           category-axis.bind="categoryAxis"
                           tooltip.bind="tooltip">
@@ -17,73 +16,25 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <!-- <li>Description</li> -->
                 </ul>
                 <div>
                     <au-code language="markup">
-                      <au-kendo-chart title.bind="{text: 'Spain electricity production (GWh)'}"
-                                      data-source.bind="datasource"
-                                      legend.bind="{position: 'top'}"
-                                      series.bind="series"
-                                      series-defaults.bind="{type: 'line'}"
-                                      value-axis.bind="valueAxis"
-                                      category-axis.bind="categoryAxis"
-                                      tooltip.bind="tooltip">
-                      </au-kendo-chart>
+
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
-                      export class BindingToRemoteData {
-                        datasource = new kendo.data.DataSource({
-                          transport: {
-                            read: function(options) {
-                              return System.import('line-chart/json/spain-electricity.json!json')
-                              .then(data => options.success(data));
-                            }
-                          },
-                          sort: {
-                              field: "year",
-                              dir: "asc"
-                          }
-                        });
 
-                        series = [{
-                              field: "nuclear",
-                              name: "Nuclear"
-                          }, {
-                              field: "hydro",
-                              name: "Hydro"
-                          }, {
-                              field: "wind",
-                              name: "Wind"
-                        }];
-
-                        valueAxis = {
-                            labels: {
-                                format: "N0"
-                            },
-                            majorUnit: 10000
-                        };
-
-                        categoryAxis = {
-                            field: "year",
-                            labels: {
-                                rotation: -90
-                            },
-                            crosshair: {
-                                visible: true
-                            }
-                        };
-
-                        tooltip = {
-                            visible: true,
-                            shared: true,
-                            format: "N0"
-                        };
-                      }
                     </au-code>
-                </div
+                </div>
+
+                <div>
+                    <au-markdown>
+
+                    </au-markdown>
+                </div>
             </div>
         </collapse-panel>
     </section>
