--- a/sample/src/charts/line-charts/basic-use.html
+++ b/sample/src/charts/line-charts/basic-use.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
-                    <li>Description</li>
+                    <!-- <li>Description</li> -->
                 </ul>
                 <div>
                     <au-code language="markup">
