--- a/sample/src/charts/line-charts/error-bars.html
+++ b/sample/src/charts/line-charts/error-bars.html
@@ -17,8 +17,8 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
-                    <li>Description</li>
-                </ul>
+                     <!-- <li>Description</li> -->
+               </ul>
                 <div>
                     <au-code language="markup">
                        <au-kendo-chart title.bind="{text: 'Gross domestic product growth and percentage error'}"
