add donut charts
feat(sample): add donut charts

add donut charts

--- a/sample/src/charts/donut-charts/binding-to-local-data.html
+++ b/sample/src/charts/donut-charts/binding-to-local-data.html
@@ -1,13 +1,11 @@
 <template>
     <section>
         <collapse-panel title="Binding to local data" allow-collapse.bind="false">
-          <au-kendo-chart title.bind="{text: 'Internet Users in United States'}"
-                          data-source.bind="{data: internetUsers}"
-                          legend.bind="{ visible: false }"
-                          series-defaults.bind="seriesDefaults"
+          <au-kendo-chart title.bind="{text: 'Break-up of Spain Electricity Production for 2008'}"
+                          data-source.bind="{data: hydroData}"
+                          legend.bind="legend"
                           series.bind="series"
-                          value-axis.bind="valueAxis"
-                          category-axis.bind="categoryAxis"
+                          series-colors.bind="seriesColors"
                           tooltip.bind="tooltip">
           </au-kendo-chart>
         </collapse-panel>
@@ -17,154 +15,64 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <!-- <li>Description</li> -->
                 </ul>
                 <div>
                     <au-code language="markup">
-                      <au-kendo-chart title.bind="{text: 'Internet Users in United States'}"
-                                      data-source.bind="{data: internetUsers}"
-                                      legend.bind="{ visible: false }"
-                                      series-defaults.bind="seriesDefaults"
-                                      series.bind="series"
-                                      value-axis.bind="valueAxis"
-                                      category-axis.bind="categoryAxis"
-                                      tooltip.bind="tooltip">
-                      </au-kendo-chart>
+                       <au-kendo-chart title.bind="{text: 'Break-up of Spain Electricity Production for 2008'}"
+                                        data-source.bind="{data: hydroData}"
+                                        legend.bind="legend"
+                                        series.bind="series"
+                                        series-colors.bind="seriesColors"
+                                        tooltip.bind="tooltip">
+                        </au-kendo-chart>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
                       export class BindingToLocalData {
-                        internetUsers = [{
-                              "country": "United States",
-                              "year": "1994",
-                              "value": 4.9
-                          },
-                          {
-                              "country": "United States",
-                              "year": "1995",
-                              "value": 9.2
-                          },
-                          {
-                              "country": "United States",
-                              "year": "1996",
-                              "value": 16.4
-                          },
-                          {
-                              "country": "United States",
-                              "year": "1997",
-                              "value": 21.6
-                          },
-                          {
-                              "country": "United States",
-                              "year": "1998",
-                              "value": 30.1
-                          },
-                          {
-                              "country": "United States",
-                              "year": "1999",
-                              "value": 35.9
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2000",
-                              "value": 43.1
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2001",
-                              "value": 49.2
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2002",
-                              "value": 59.0
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2003",
-                              "value": 61.9
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2004",
-                              "value": 65
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2005",
-                              "value": 68.3
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2006",
-                              "value": 69.2
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2007",
-                              "value": 75.3
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2008",
-                              "value": 74.2
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2009",
-                              "value": 71.2
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2010",
-                              "value": 74.2
-                          },
-                          {
-                              "country": "United States",
-                              "year": "2011",
-                              "value": 78.2
+                          hydroData = [{
+                                  "source": "Hydro",
+                                  "percentage": 22,
+                                  "explode": true
+                              }, {
+                                  "source": "Solar",
+                                  "percentage": 2
+                              }, {
+                                  "source": "Nuclear",
+                                  "percentage": 49
+                              }, {
+                                  "source": "Wind",
+                                  "percentage": 27
+                          }];
+
+                          legend = {
+                              position: "bottom"
                           }
-                        ];
 
-                        seriesDefaults = {
-                            type: "line",
-                            labels: {
-                                visible: true,
-                                format: "{0}%",
-                                background: "transparent"
-                            }
-                        };
+                          series = [{
+                              type: "donut",
+                              field: "percentage",
+                              categoryField: "source",
+                              explodeField: "explode"
+                          }];
 
-                        series = [{
-                            field: "value",
-                            name: "United States"
-                        }];
+                          seriesColors= ["#42a7ff", "#666666", "#999999", "#cccccc"];
 
-                        valueAxis = {
-                            labels: {
-                                format: "{0}%"
-                            },
-                            line: {
-                                visible: false
-                            }
-                        };
-
-                        categoryAxis = {
-                            field: "year",
-                            majorGridLines: {
-                                visible: false
-                            }
-                        };
-
-                        tooltip = {
-                            visible: true,
-                            format: "{0}%",
-                            template: "${category} - ${value}%"
-                        };
+                          tooltip = {
+                              visible: true,
+                              template: "${ category } - ${ value }%"
+                          }
                       }
                     </au-code>
-                </div
+                </div>
+
+                <div>
+                    <au-markdown>
+
+                    </au-markdown>
+                </div>
             </div>
         </collapse-panel>
     </section>
