--- a/sample/src/charts/donut-charts/binding-to-remote-data.html
+++ b/sample/src/charts/donut-charts/binding-to-remote-data.html
@@ -1,11 +1,11 @@
 <template>
     <section>
-        <collapse-panel title="Binding to remote data" allow-collapse.bind="false">
-          <au-kendo-chart title.bind="{text: 'Spain electricity production (GWh)'}"
+        <collapse-panel title="Bining to remote data" allow-collapse.bind="false">
+          <au-kendo-chart title.bind="title"
                           data-source.bind="datasource"
-                          legend.bind="{position: 'top'}"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
                           series.bind="series"
-                          series-defaults.bind="{type: 'line'}"
                           value-axis.bind="valueAxis"
                           category-axis.bind="categoryAxis"
                           tooltip.bind="tooltip">
@@ -17,73 +17,74 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
-                </ul>
+                     <!-- <li>Description</li> -->
+               </ul>
                 <div>
                     <au-code language="markup">
-                      <au-kendo-chart title.bind="{text: 'Spain electricity production (GWh)'}"
-                                      data-source.bind="datasource"
-                                      legend.bind="{position: 'top'}"
-                                      series.bind="series"
-                                      series-defaults.bind="{type: 'line'}"
-                                      value-axis.bind="valueAxis"
-                                      category-axis.bind="categoryAxis"
-                                      tooltip.bind="tooltip">
-                      </au-kendo-chart>
+                       <au-kendo-chart title.bind="title"
+                                        data-source.bind="datasource"
+                                        legend.bind="legend"
+                                        series-defaults.bind="seriesDefaults"
+                                        series.bind="series"
+                                        value-axis.bind="valueAxis"
+                                        category-axis.bind="categoryAxis"
+                                        tooltip.bind="tooltip">
+                        </au-kendo-chart>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
                       export class BindingToRemoteData {
-                        datasource = new kendo.data.DataSource({
-                          transport: {
-                            read: function(options) {
-                              return System.import('line-chart/json/spain-electricity.json!json')
-                              .then(data => options.success(data));
-                            }
-                          },
-                          sort: {
-                              field: "year",
-                              dir: "asc"
+                          datasource = new kendo.data.DataSource({
+                              transport: {
+                                read: function(options) {
+                                  return System.import('charts/donut-charts/json/screen-resolution.json!json')
+                                  .then(data => options.success(data));
+                                }
+                              },
+                              sort: {
+                                  field: "order",
+                                  dir: "asc"
+                              },
+                              group: {
+                                  field: "year"
+                              }
+                          });
+
+                          legend = {
+                              position: "top"
+                          };
+
+                          title = {
+                              text: "1024x768 screen resolution trends"
+                          };
+
+                          seriesDefaults = {
+                              type: "donut",
+                              startAngle: 270
+                          };
+
+                          series = [{
+                              field: "share",
+                              categoryField: "resolution",
+                              visibleInLegendField: "visibleInLegend",
+                              padding: 10
+                          }];
+
+                          tooltip = {
+                              visible: true,
+                              template: "#= dataItem.resolution #: #= value #% (#= dataItem.year #)"
                           }
-                        });
-
-                        series = [{
-                              field: "nuclear",
-                              name: "Nuclear"
-                          }, {
-                              field: "hydro",
-                              name: "Hydro"
-                          }, {
-                              field: "wind",
-                              name: "Wind"
-                        }];
-
-                        valueAxis = {
-                            labels: {
-                                format: "N0"
-                            },
-                            majorUnit: 10000
-                        };
-
-                        categoryAxis = {
-                            field: "year",
-                            labels: {
-                                rotation: -90
-                            },
-                            crosshair: {
-                                visible: true
-                            }
-                        };
-
-                        tooltip = {
-                            visible: true,
-                            shared: true,
-                            format: "N0"
-                        };
                       }
                     </au-code>
-                </div
+                </div>
+
+                <div>
+                    <au-markdown>
+
+                    </au-markdown>
+                </div>
             </div>
         </collapse-panel>
     </section>
