--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -52,6 +52,7 @@
             <li><a route-href="route: radar-charts">Radar charts</a></li>
             <li><a route-href="route: range-charts">Range charts</a></li>
             <li><a route-href="route: scatter-charts">Scatter charts</a></li>
+            <li><a route-href="route: sparkline">Sparkline</a></li>
             <li><a route-href="route: waterfall-charts">Waterfall charts</a></li>
           </ul>
         </li>
