add sample selector
feat(sample): add sample selector

add sample selector

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -3,210 +3,58 @@
         <h3>About Aurelia-KendoUI Plugin (bridge)</h3>
 
         <br>
-        <div au-kendo-tabstrip>
-            <!-- Tabs -->
-            <ul>
-                <li class="k-state-active">
-                    <span style="font-size:20px">What is Aurelia-KendoUI bridge</span>
-                </li>
-                <li>
-                    <span style="font-size:20px">Supported controls</span>
-                </li>
-            </ul>
 
-            <!-- First tab page -->
-            <div>
-                <br>
-                <br>
+        <div>
+            <br>
+            <br>
 
-                <!-- Row 1, tab page 1 - 3 columns (images) -->
-                <div class="row">
-                    <div class="col-xs-12 col-sm-4">
-                        <img src="images/aurelia-logo-04.png" >
-                    </div>
-                   <div class="col-xs-12 col-sm-4">
-                        <img src="images/bridge-image-08-low.png" >
-                    </div>
-                    <div class="col-xs-12 col-sm-4">
-                        <img src="images/kendo-logo-05.png" >
-                    </div>
+            <!-- Row 1 - 3 columns (images) -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-4">
+                    <img src="images/aurelia-logo-04.png" >
                 </div>
-
-                <br>
-                <br>
-
-                <!-- Row 2, tab page 1 - 2 columns (text) -->
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6">
-                        <p>
-                            Aurelia is a next generation UI framework. Whether you're building apps for the browser, mobile or desktop, Aurelia can enable you to not only create amazing UI, but do it in a way that is maintainable, testable and extensible.
-                        </p>
-                        <p>
-                            Aurelia is just JavaScript. However, it's not yesterday's JavaScript, but the JavaScript of tomorrow. By using modern tooling we've been able to write Aurelia from the ground up in ECMAScript 2016. This means we have native modules, classes, decorators and more at our disposal...and you have them too.
-                        </p>
-                        <p>
-                            Not only is Aurelia written in modern and future JavaScript, but it also takes a modern approach to architecture. In the past, frameworks have been monolithic beasts. Not Aurelia though. It's built as a series of collaborating libraries. Taken together, they form a powerful and robust framework for building Single Page Apps (SPAs). However, Aurelia's libraries can often be used individually, in traditional web sites or even on the server-side through technologies like NodeJS.
-                        </p>
-                        <p>
-                            Aurelia is open source, but unlike much open source in the JavaScript space, Aurelia is an official product with commercial backing. If your business is going to spend significant money building software, you want to do it on a platform that's committed to you as a customer. You want to be able to form a relationship with your technology provider to ensure that you and your developers have a solid platform upon which to build your business now and in the years to come.
-                        </p>
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6">
-                        <p>
-                            Kendo UI is an HTML5 user interface framework for building interactive and high-performance websites and applications. The framework comes with a library of 70+ UI widgets, an abundance of data-visualization gadgets, client-side data source, built-in MVVM (Model-View-ViewModel) library. Kendo UI provides AngularJS, Bootstrap  - and soon Aurelia integration
-                        </p>
-
-                        <p>
-                            Kendo UI Professional is one of the commercial versions of Kendo UI. It is a comprehensive framework providing 70+ Kendo UI widgets, and includes a simple and consistent programming interface, a rock-solid DataSource, out-of-the-box themes, an MVVM framework, and more. Kendo UI Professional includes widgets for enterprise-grade line-of-business applications and is suitable for creating professional websites that require expert and timely technical support.
-                        </p>
-                        <p>
-                           Kendo UI Core is the free and open-source Kendo UI distribution, released under Apache v2.0 License. It provides access to a limited number of widgets and framework features, and to 1,000+ tests running across browsers for each commit to the Kendo UI Core GitHub repository. Kendo UI Core is suitable for open-source or commercial projects that do not require complex UI, such as Grid, Chart, etc., nor dedicated technical support. Kendo UI Core does not offer dedicated technical support.
-                        </p>
-                    </div>
+               <div class="col-xs-12 col-sm-4">
+                    <img src="images/bridge-image-08-low.png" >
                 </div>
-
+                <div class="col-xs-12 col-sm-4">
+                    <img src="images/kendo-logo-05.png" >
+                </div>
             </div>
 
-            <!-- Second tab page - columns listing suported controls -->
-            <div>
-                <br>
-                <br>
+            <br>
+            <br>
 
-                <!-- Second tab page title - single column -->
-                <div class="row">
-                    <div class="col-xs-12 col-sm-12">
-                        <p>
-                            <span style="font-size:18px">
-                                <img src="images/green.png">
-                                Implemented controls
-                                &nbsp; &nbsp;
-                                <img src="images/orange.png">
-                                controls under development
-                            </span>
-                        </p>
-                        <br>
-                        <br>
-                    </div>
+            <!-- Row 2 - 2 columns (text) -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <p>
+                        Aurelia is a next generation UI framework. Whether you're building apps for the browser, mobile or desktop, Aurelia can enable you to not only create amazing UI, but do it in a way that is maintainable, testable and extensible.
+                    </p>
+                    <p>
+                        Aurelia is just JavaScript. However, it's not yesterday's JavaScript, but the JavaScript of tomorrow. By using modern tooling we've been able to write Aurelia from the ground up in ECMAScript 2016. This means we have native modules, classes, decorators and more at our disposal...and you have them too.
+                    </p>
+                    <p>
+                        Not only is Aurelia written in modern and future JavaScript, but it also takes a modern approach to architecture. In the past, frameworks have been monolithic beasts. Not Aurelia though. It's built as a series of collaborating libraries. Taken together, they form a powerful and robust framework for building Single Page Apps (SPAs). However, Aurelia's libraries can often be used individually, in traditional web sites or even on the server-side through technologies like NodeJS.
+                    </p>
+                    <p>
+                        Aurelia is open source, but unlike much open source in the JavaScript space, Aurelia is an official product with commercial backing. If your business is going to spend significant money building software, you want to do it on a platform that's committed to you as a customer. You want to be able to form a relationship with your technology provider to ensure that you and your developers have a solid platform upon which to build your business now and in the years to come.
+                    </p>
                 </div>
 
-                <!-- Second tab page content - five columns -->
-                <div class="row">
-                    <div class="col-xs-12 col-sm-2">
-                        MOST POPULAR                                      <br>
-                        <img src="images/orange.png">
-                        <a href="#/grid">Grid</a>                         <br>
-                        <a href="#">Editor</a>                            <br>
-                        <a href="#">Scheduler</a>                         <br>
-                        <img src="images/green.png">
-                        <a href="#/bar-charts">Bar Charts</a>      <br>
-                        <img src="images/green.png">
-                        <a href="#/line-charts">Line Charts</a>           <br>
-                        <a href="#">Stock Charts</a>                      <br>
-                        <a href="#/dropdownlist">DropDownList</a>         <br>
-                        <a href="#">Window</a>                            <br>
-                        <a href="#">Upload</a>                            <br>
-                        <a href="#">TreeView</a>                          <br>
-                    </div>
+                <div class="col-xs-12 col-sm-6">
+                    <p>
+                        Kendo UI is an HTML5 user interface framework for building interactive and high-performance websites and applications. The framework comes with a library of 70+ UI widgets, an abundance of data-visualization gadgets, client-side data source, built-in MVVM (Model-View-ViewModel) library. Kendo UI provides AngularJS, Bootstrap  - and soon Aurelia integration
+                    </p>
 
-                   <div class="col-xs-12 col-sm-2">
-                        DATA MANAGEMENT                                   <br>
-                        <img src="images/orange.png">
-                        <a href="#/grid">Grid</a>                         <br>
-                        <a href="#">Spreadsheet</a>                       <br>
-                        <a href="#">Listview</a>                          <br>
-                        <a href="#">Pivot Grid</a>                        <br>
-                        <a href="#">TreeList</a>                          <br>
-                        <a href="#">ScrollView</a>                        <br>
-                        <br>
-                        EDITORS                                           <br>
-                        <img src="images/green.png">
-                        <a href="#/autocomplete">Autocomplete</a>         <br>
-                        <a href="#">ColorPicker</a>                       <br>
-                        <a href="#combobox">Combobox</a>                  <br>
-                        <a href="#">DatePicker</a>                        <br>
-                        <a href="#">DateTimePicker</a>                    <br>
-                        <a href="#/dropdownlist">DropDownList</a>         <br>
-                        <a href="#">Editor</a>                            <br>
-                        <a href="#">MaskedTextBox</a>                     <br>
-                        <a href="#">MultiSelect</a>                       <br>
-                        <a href="#">Numeric TextBox</a>                   <br>
-                        <a href="#">Slider</a>                            <br>
-                        <a href="#">TimePicker</a>                        <br>
-                        <a href="#">Upload</a>                            <br>
-                        <a href="#">Switch</a>                            <br>
-                   </div>
-
-                   <div class="col-xs-12 col-sm-2">
-                       CHARTS                                            <br>
-                       <img src="images/green.png">
-                       <a href="#/area-charts">Area Charts</a>            <br>
-                       <img src="images/green.png">
-                       <a href="#/bar-charts">Bar Charts</a>                         <br>
-                       <img src="images/green.png">
-                       <a href="#/box-plot-charts">Box Plot Charts</a>    <br>
-                       <a href="#">Bubble Charts</a>                      <br>
-                       <a href="#">Bullet Charts</a>                      <br>
-                       <a href="#">Donut Charts</a>                       <br>
-                       <a href="#">Funnel Charts</a>                      <br>
-                       <img src="images/green.png">
-                       <a href="#/line-charts">Line Charts</a>            <br>
-                       <a href="#">Pie Charts</a>                         <br>
-                       <a href="#">Polar Charts</a>                       <br>
-                       <a href="#">Radar Charts</a>                       <br>
-                       <a href="#">Range Bar Charts</a>                   <br>
-                       <a href="#">Scatter Charts</a>                     <br>
-                       <a href="#">Sparklines</a>                         <br>
-                       <a href="#">Stock Charts</a>                       <br>
-                       <a href="#">TreeMap</a>                            <br>
-                       <a href="#">Waterfall Charts</a>                   <br>
-                       <br>
-                       GAUGES                                             <br>
-                       <a href="#">Linear Gauge</a>                       <br>
-                       <a href="#">Radial Gauge</a>                       <br>
-                   </div>
-
-                   <div class="col-xs-12 col-sm-2">
-                       BARCODES                                           <br>
-                       <a href="#">Barcode</a>                            <br>
-                       <a href="#">QR Code</a>                            <br>
-                       <br>
-                       DIAGRAMS & MAPS                                    <br>
-                       <a href="#">Diagram</a>                            <br>
-                       <a href="#">Map</a>                                <br>
-                       <br>
-                       SCHEDULING                                         <br>
-                       <a href="#">Calendar</a>                           <br>
-                       <a href="#">Gantt</a>                              <br>
-                       <a href="#/scheduler">Scheduler</a>                <br>
-                       <a href="#"></a>                                   <br>
-                   </div>
-
-                   <div class="col-xs-12 col-sm-2">
-                       LAYOUT                                             <br>
-                       <a href="#">Notification</a>                       <br>
-                       <a href="#">Responsive Panel</a>                   <br>
-                       <a href="#">Splitter</a>                           <br>
-                       <a href="#">Tooltip</a>                            <br>
-                       <a href="#">Window</a>                             <br>
-                       <br>
-                       NAVIGATION                                         <br>
-                       <img src="images/green.png">
-                       <a href="#/button">Button</a>                      <br>
-                       <a href="#">ButtonGroup</a>                        <br>
-                       <a href="#">Menu</a>                               <br>
-                       <a href="#">PanelBar</a>                           <br>
-                       <a href="#/tabstrip">TabStrip</a>                  <br>
-                       <a href="#/toolbar">ToolBar</a>                    <br>
-                       <a href="#">TreeView</a>                           <br>
-                   </div>
+                    <p>
+                        Kendo UI Professional is one of the commercial versions of Kendo UI. It is a comprehensive framework providing 70+ Kendo UI widgets, and includes a simple and consistent programming interface, a rock-solid DataSource, out-of-the-box themes, an MVVM framework, and more. Kendo UI Professional includes widgets for enterprise-grade line-of-business applications and is suitable for creating professional websites that require expert and timely technical support.
+                    </p>
+                    <p>
+                       Kendo UI Core is the free and open-source Kendo UI distribution, released under Apache v2.0 License. It provides access to a limited number of widgets and framework features, and to 1,000+ tests running across browsers for each commit to the Kendo UI Core GitHub repository. Kendo UI Core is suitable for open-source or commercial projects that do not require complex UI, such as Grid, Chart, etc., nor dedicated technical support. Kendo UI Core does not offer dedicated technical support.
+                    </p>
                 </div>
-
-                <br>
-                <br>
-                <br>
             </div>
+
         </div>
-
     </section>
 </template>
