--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -24,6 +24,10 @@
           <a route-href="route: install; params.bind: { page: 'begin' }">Installation Wizard</a>
         </li>
 
+        <li route-highlight="routes: sample-selector">
+          <a route-href="route: sample-selector">Sample Selector</a>
+        </li>
+
         <li route-highlight="routes: autocomplete">
           <a route-href="route: autocomplete">Autocomplete</a>
         </li>
